refactor: centralize command boilerplate, schedulers, action formatting, and chat prefix; sectioned help menu